# research-graphrag

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: gold_set.json
benchmarks/reports/: 2026-04-19T09-39-59+00-00.json  2026-04-19T09-45-04+00-00.json  latest.json
docs/: implementation-plan.md  queries.md
src/research_graphrag/: cli.py  config.py
src/research_graphrag/algorithms/: _gds.py  centrality.py  communities.py  pagerank.py
src/research_graphrag/bench/: audit.py  citation.py  community.py  e2e.py  faithfulness.py  gold_sets.py  latency.py  retrieval.py  suite.py
src/research_graphrag/clients/: neo4j_client.py  openalex.py
src/research_graphrag/ingest/: embed.py  seed.py
src/research_graphrag/pipelines/: gaps.py  lineage.py  reading_list.py  research_rag.py
src/research_graphrag/retrieval/: embeddings.py  retrievers.py
src/research_graphrag/schema/: cypher.py  models.py
tests/: test_openalex.py
ui/: _helpers.py  app.py
ui/pages/: 1_Seed.py  2_Stats.py  3_Retrieve.py  4_Ask.py  5_Reading_List.py  6_Lineage.py  7_Gaps.py  8_Analyze.py  9_Benchmarks.py
