[project]
name = "research-graphrag"
version = "0.1.0"
description = "GraphRAG over research paper citation networks using Neo4j and neo4j-graphrag"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "neo4j-graphrag[openai,sentence-transformers]>=1.0.0",
    "neo4j>=5.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "fastembed>=0.3.0",
    "streamlit>=1.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
research = "research_graphrag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_graphrag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
